# retcon

./: .ghci  .gitignore  .stylish-haskell.yml  .travis.yml  HLint.hs  LICENSE  Makefile  README.md  lol  retcon.cabal  retcon.sql  synchronise.cabal  synchronised.sql
bench/: DiffAlgorithms.hs
datasource/: json-directory.conf  json-directory.hs
docs/: .gitignore  Makefile  data-source.md  errors.md  overview.md
docs/design/: algorithm.md  api.md  architecture.dot  design.md  interactions.md  laws.md  notification.md  use-cases.md  wire-format.md
docs/documentation/: user-api.md
examples/: example-entity.conf  example-entity.yaml
lib/: Retcon.hs  Synchronise.hs
lib/Data/Tree/: GenericTrie.hs
lib/Retcon/: Client.hs  Configuration.hs  Core.hs  DataSource.hs  Diff.hs  Document.hs  Error.hs  Handler.hs  Identifier.hs  MergePolicy.hs  Monad.hs  Notifications.hs  Options.hs  Store.hs
lib/Retcon/DataSource/: JsonDirectory.hs  PostgreSQL.hs
lib/Retcon/Network/: Client.hs  Ekg.hs  Protocol.hs  Server.hs  Types.hs  WireFormat.hs
lib/Retcon/Program/: Daemon.hs  Once.hs
lib/Retcon/Store/: Base.hs  Memory.hs  PostgreSQL.hs
lib/Synchronise/: Configuration.hs  DataSource.hs  Diff.hs  Document.hs  Identifier.hs  Monad.hs  Store.hs
lib/Synchronise/Network/: Client.hs  Protocol.hs  Server.hs
lib/Synchronise/Program/: Daemon.hs  Once.hs
lib/Synchronise/Store/: Base.hs  Memory.hs  PostgreSQL.hs
lib/Utility/: Configuration.hs
src/: API.hs  CLI.hs  Diff.hs  Main.hs  Oneshot.hs  client-demo.hs  client.hs  notifications.hs  server-demo.hs
src/Data/Tree/: EdgeLabelled.hs  GenericTrie.hs
src/Retcon/: Application.hs  Config.hs  Core.hs  DataSource.hs  Diff.hs  Document.hs  Error.hs  Handler.hs  JsonDirectory.hs  MergePolicy.hs  Monad.hs  Monad.hs-boot  Notifications.hs  Options.hs  Store.hs  Store.hs-boot
src/Retcon/Data/: Storage.hs
src/Retcon/DataSource/: JsonDirectory.hs  PostgreSQL.hs
src/Retcon/Helpers/: Strings.hs
src/Retcon/Store/: Memory.hs  PostgreSQL.hs
src/Utility/: Configuration.hs
test/: api-roundtrip-test.conf  api-roundtrip-test.hs  policy-test.hs  source-test.hs  store-psql-test.hs  store-test.hs  tests.hs
test/data/: example.conf
tests/: APIRoundTripTest.hs  AcceptanceTest.hs  CLI.hs  ConfigTest.hs  DBHelpers.hs  DiffTest.hs  DocumentTest.hs  HandlerTest.hs  JsonDirectoryTest.hs  ParametersTest.hs  PolicyTest.hs  PostgreSQLTest.hs  StoreMemory.hs  StorePostgreSQL.hs  TestHelpers.hs  TestScaffold.hs  TreeHelpers.hs  TreeTest.hs  UserAPITest.hs  WireFormatsTest.hs  ZMQClient.hs
tests/data/: 01-diff-target.json  notification.rules  notification.txt  parameters.conf  retcon.conf  retcon_pg_test2.sql  simple-document.json
tests/data/customer/json/: 01-diff-source.json
tests/data/customer/json2/: 01-diff-source.json
tests/data/json/: 01-diff-source.json
tests/data/json/customer/data/: 01-diff-source.json  01-diff-target.json
tests/data/sql/: retcon_pg_test.sql
tests/test-results/: zlpgreggbsjqashvzmgmtqxngarxfswwqlaiubgcxdiktwfcjharnvpewqpilpso.json
