name:                retcon
version:             0.1.0.0
synopsis:            Synchronise multiple data sources.
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton <thomas.sutton@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2014 Anchor Systems, Pty Ltd and Others
category:            Data
build-type:          Simple
extra-source-files:  README.md
                   , retcon.sql
cabal-version:       >=1.10

source-repository head
  type: git
  location: git@github.com:anchor/retcon.git

library
  exposed-modules:     Retcon.DataSource
                     , Retcon.DataSource.JsonDirectory
                     , Retcon.DataSource.PostgreSQL
                     , Retcon.Diff
                     , Retcon.Document
                     , Retcon.Error
                     , Retcon.Handler
                     , Retcon.MergePolicy
                     , Retcon.Monad
                     , Retcon.Options
                     , Retcon.Store
                     , Retcon.Store.PostgreSQL
                     , Retcon.Store.Memory
                     , Data.Tree.GenericTrie
                     , Utility.Configuration
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , async
                     , bifunctors
                     , bytestring
                     , containers
                     , directory
                     , enclosed-exceptions
                     , filepath
                     , free
                     , lens
                     , mime-mail
                     , monad-control
                     , monad-logger
                     , mtl
                     , optparse-applicative >= 0.10
                     , postgresql-simple
                     , random
                     , text
                     , time
                     , transformers >= 0.4
                     , transformers-base
                     , trifecta
                     , unix
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable             retcon-demo
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             CLI.hs
  build-depends:       base
                     , retcon
                     , text
                     , containers
                     , unordered-containers
                     , aeson
                     , transformers
                     , mtl
                     , lens
                     , directory
                     , filepath
                     , postgresql-simple
                     , monad-logger

test-suite             document-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             DocumentTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , retcon
                     , text
                     , unordered-containers
                     , QuickCheck

test-suite             diff-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             DiffTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , retcon
                     , text
                     , unordered-containers
                     , QuickCheck

test-suite             tree-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             TreeTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , bytestring
                     , containers
                     , hspec
                     , retcon
                     , text
                     , unordered-containers
                     , QuickCheck

test-suite             policy-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             PolicyTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , bytestring
                     , containers
                     , hspec
                     , retcon
                     , text
                     , unordered-containers
                     , QuickCheck

test-suite             userapi-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             UserAPITest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , retcon
                     , text
                     , transformers
                     , unordered-containers
                     , QuickCheck

test-suite             json-directory-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             JsonDirectoryTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , process
                     , retcon
                     , text
                     , unordered-containers
                     , QuickCheck

test-suite             postgresql-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             PostgreSQLTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , postgresql-simple
                     , process
                     , retcon
                     , text
                     , transformers
                     , unordered-containers
                     , QuickCheck

test-suite             handler-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             HandlerTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bifunctors
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , mtl
                     , postgresql-simple
                     , process
                     , retcon
                     , text
                     , transformers
                     , unordered-containers
                     , QuickCheck

test-suite store-memory-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             StoreMemory.hs
  build-depends:       base
                     , containers
                     , hspec
                     , retcon

test-suite configuration-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             ConfigTest.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , hspec
                     , mtl
                     , transformers
                     , trifecta
                     , retcon

test-suite store-postgresql-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             StorePostgreSQL.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , hspec
                     , mtl
                     , postgresql-simple
                     , process
                     , transformers
                     , retcon
