name:                retcon
version:             0.1.0.0
synopsis:            Synchronise multiple data sources.
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton <thomas.sutton@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2014 Anchor Systems, Pty Ltd and Others
category:            Data
build-type:          Simple
extra-source-files:  README.md
                   , retcon.sql
cabal-version:       >=1.10

source-repository head
  type: git
  location: git@github.com:anchor/retcon.git

library
  exposed-modules:     Retcon.Core
                     , Retcon.Network.Client
                     , Retcon.Network.Server
                     , Retcon.DataSource.JsonDirectory
                     , Retcon.DataSource.PostgreSQL
                     , Retcon.Diff
                     , Retcon.Document
                     , Retcon.Error
                     , Retcon.Handler
                     , Retcon.MergePolicy
                     , Retcon.Monad
                     , Retcon.Notifications
                     , Retcon.Options
                     , Retcon.Store.PostgreSQL
                     , Retcon.Store.Memory
                     -- Utility modules
                     , Data.Tree.GenericTrie
                     , Utility.Configuration
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , async
                     , bifunctors
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , semigroups
                     , enclosed-exceptions
                     , filepath
                     , free
                     , old-locale
                     , HStringTemplate
                     , lens
                     , lifted-base
                     , mime-mail
                     , monad-control
                     , monad-logger
                     , binary
                     , mtl
                     , optparse-applicative >= 0.11
                     , postgresql-simple
                     , random
                     , text
                     , time
                     , transformers >= 0.4
                     , transformers-base
                     , trifecta
                     , unix
                     , unordered-containers
                     , zeromq4-haskell
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable send-notifications
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             notifications.hs
  build-depends:       base
                     , HStringTemplate
                     , bytestring
                     , containers
                     , filepath
                     , mime-mail
                     , old-locale
                     , optparse-applicative
                     , postgresql-simple
                     , text
                     , time
                     , trifecta
                     , retcon

executable             retcon-demo
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             CLI.hs
  build-depends:       base
                     , retcon
                     , text
                     , containers
                     , unordered-containers
                     , aeson
                     , transformers
                     , mtl
                     , lens
                     , directory
                     , filepath
                     , postgresql-simple
                     , monad-logger

executable             client-demo
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             client-demo.hs
  build-depends:       base
                     , bytestring
                     , lens
                     , optparse-applicative
                     , zeromq4-haskell
                     , retcon

executable             server-demo
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             server-demo.hs
  build-depends:       base
                     , lens
                     , optparse-applicative
                     , zeromq4-haskell
                     , retcon

test-suite             document-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             DocumentTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , lens
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , transformers
                     , retcon
                     , text
                     , unordered-containers
                     , QuickCheck

test-suite             diff-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             DiffTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , transformers
                     , directory
                     , filepath
                     , hspec
                     , retcon
                     , text
                     , unordered-containers
                     , QuickCheck

test-suite             tree-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             TreeTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , bytestring
                     , containers
                     , hspec
                     , retcon
                     , text
                     , unordered-containers
                     , QuickCheck

test-suite             policy-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             PolicyTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , bytestring
                     , containers
                     , hspec
                     , retcon
                     , text
                     , unordered-containers
                     , QuickCheck

test-suite             userapi-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             UserAPITest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , lens
                     , retcon
                     , text
                     , transformers
                     , unordered-containers
                     , QuickCheck

test-suite             postgresql-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             PostgreSQLTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , lens
                     , postgresql-simple
                     , process
                     , retcon
                     , text
                     , transformers
                     , unordered-containers
                     , QuickCheck

test-suite             handler-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             HandlerTest.hs
  other-modules:       TestHelpers, TreeHelpers
  build-depends:       base
                     , aeson
                     , bifunctors
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , lens
                     , mtl
                     , postgresql-simple
                     , process
                     , retcon
                     , text
                     , transformers
                     , unordered-containers
                     , QuickCheck

test-suite configuration-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             ConfigTest.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , hspec
                     , mtl
                     , transformers
                     , trifecta
                     , retcon

test-suite store-postgresql-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             StorePostgreSQL.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , hspec
                     , mtl
                     , postgresql-simple
                     , process
                     , transformers
                     , lens
                     , retcon

test-suite           wire-formats-test
  hs-source-dirs:    tests
  main-is:           WireFormatsTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base
                   , hspec
                   , text
                   , QuickCheck
                   , mtl
                   , bytestring
                   , containers
                   , binary
                   , retcon

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           acceptance-test
  hs-source-dirs:    tests
  main-is:           AcceptanceTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:     base
                   , QuickCheck
                   , async
                   , binary
                   , hspec
                   , filepath
                   , bytestring
                   , transformers
                   , directory
                   , lens
                   , containers
                   , hspec
                   , mtl
                   , text
                   , retcon
                   , process

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

-- vim: set tabstop=21 expandtab:
