name:                retcon
version:             2.0.0.2
synopsis:            Daemon to propagate changes between JSON stores.
description:
  Retcon is a library and program to detect, extract, merge and propagate
  changes to JSON documents stored in multiple systems.
homepage:            https://github.com/anchor/retcon
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           Copyright 2014-2015 Thomas Sutton, Anchor Systems,
                     and others.
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/anchor/retcon

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
    Retcon
    Retcon.Configuration
    Retcon.DataSource
    Retcon.Diff
    Retcon.Document
    Retcon.Identifier
    Retcon.Store
    Retcon.Monad
    Retcon.Network.Ekg
    Retcon.Network.Protocol
    Retcon.Network.Server
    Retcon.Network.Client
    Retcon.Store.Base
    Retcon.Store.Memory
    Retcon.Store.PostgreSQL
    Retcon.Program.Daemon
    Retcon.Program.Once
  other-modules:
    Paths_retcon
  build-depends:
      base >=4.5 && <4.9
    , aeson
    , aeson-diff >= 0.1.1.2
    , async
    , binary
    , bytestring
    , configurator
    , containers
    , errors < 2.0
    , ekg
    , ekg-core
    , exceptions
    , hslogger
    , lens
    , mtl
    , postgresql-simple
    , process
    , regex-compat
    , semigroups
    , text
    , transformers >= 0.3
    , transformers-compat >= 0.4
    , zeromq4-haskell
  ghc-options:
    -Wall

executable retcon-oneshot
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Oneshot.hs
  other-modules:
    Paths_retcon
  build-depends:
      base
    , configurator
    , filepath
    , optparse-applicative
    , retcon
    , text
    , transformers
    , transformers-compat

executable retcond
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Paths_retcon
  build-depends:
      base
    , configurator
    , filepath
    , optparse-applicative
    , retcon
    , text
    , transformers
    , transformers-compat

executable retcon-client
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             client.hs
  build-depends:
      base
    , optparse-applicative
    , retcon
    , text

test-suite source-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             source-test.hs
  build-depends:
      base
    , HUnit
    , aeson
    , hspec
    , retcon

test-suite policy-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             policy-test.hs
  build-depends:
      base
    , aeson-diff
    , hspec
    , retcon

test-suite api-roundtrip-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             api-roundtrip-test.hs
  build-depends:
      base
    , async
    , configurator
    , either
    , hslogger
    , hspec
    , mtl
    , process
    , retcon
    , transformers
    , transformers-compat

test-suite store-psql-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             store-psql-test.hs
  build-depends:
      base
    , aeson
    , bytestring
    , hspec
    , postgresql-simple
    , process
    , retcon
    , text
    , transformers
    , transformers-compat
    , unordered-containers
    , vector
