name:                synchronise
version:             0.0.1.0
synopsis:            Daemon to propagate changes between JSON stores.
description:
  Synchronise is a library and program to detect, extract, merge and propagate
  changes to JSON documents stored in multiple systems.
homepage:            https://github.com/thsutton/synchronise
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           Copyright 2014-2015 Thomas Sutton, Anchor Systems,
                     and others.
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/thsutton/synchronise/

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Synchronise
                     , Synchronise.DataSource
                     , Synchronise.Document
                     , Synchronise.Identifier
  build-depends:
      base >=4.7 && <4.8
    , aeson
    , aeson-diff
    , mtl
    , process
    , text
    , transformers >= 0.4

executable synchronised
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
      base
    , synchronise

test-suite test-synchronise
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:
      base
    , synchronise

test-suite source-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             source-test.hs
  build-depends:
      base
    , synchronise
