name:                synchronise
version:             0.0.1.0
synopsis:            Daemon to propagate changes between JSON stores.
description:
  Synchronise is a library and program to detect, extract, merge and propagate
  changes to JSON documents stored in multiple systems.
homepage:            https://github.com/thsutton/synchronise
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           Copyright 2014-2015 Thomas Sutton, Anchor Systems,
                     and others.
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/thsutton/synchronise/

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
    Synchronise
    Synchronise.Configuration
    Synchronise.DataSource
    Synchronise.Diff
    Synchronise.Document
    Synchronise.Identifier
    Synchronise.Store.Base
    Synchronise.Store.Memory
    Synchronise.Program.Daemon
    Synchronise.Program.Once
  other-modules:
    Paths_synchronise
  build-depends:
      base >=4.7 && <4.8
    , aeson
    , aeson-diff
    , async
    , bytestring
    , configurator
    , containers
    , lens
    , mtl
    , process
    , text
    , transformers >= 0.4
  ghc-options:
    -Wall

executable synchronise
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Oneshot.hs
  other-modules:
    Paths_synchronise
  build-depends:
      base
    , configurator
    , ekg
    , filepath
    , optparse-applicative
    , synchronise
    , text
    , transformers

executable synchronised
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Paths_synchronise
  build-depends:
      base
    , configurator
    , filepath
    , optparse-applicative
    , synchronise
    , text
    , transformers

test-suite test-synchronise
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:
      base
    , synchronise
    , hspec

test-suite source-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             source-test.hs
  build-depends:
      base
    , aeson
    , hspec
    , synchronise
