name:                synchronise
version:             0.0.1.0
synopsis:            Daemon to propagate changes between JSON stores.
description:
  Synchronise is a library and program to detect, extract, merge and propagate
  changes to JSON documents stored in multiple systems.
homepage:            https://github.com/thsutton/synchronise
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           Copyright 2014-2015 Thomas Sutton, Anchor Systems,
                     and others.
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/thsutton/synchronise/

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
    Synchronise
    Synchronise.Configuration
    Synchronise.DataSource
    Synchronise.Diff
    Synchronise.Document
    Synchronise.Identifier
    Synchronise.Store
    Synchronise.Monad
    Synchronise.Network.Protocol
    Synchronise.Network.Server
    Synchronise.Network.Client
    Synchronise.Store.Base
    Synchronise.Store.Memory
    Synchronise.Store.PostgreSQL
    Synchronise.Program.Daemon
    Synchronise.Program.Once
  other-modules:
    Paths_synchronise
  build-depends:
      base >=4.7 && <4.8
    , aeson
    , aeson-diff
    , async
    , binary
    , bytestring
    , configurator
    , containers
    , exceptions
    , errors
    , hslogger
    , lens
    , mtl
    , postgresql-simple
    , process
    , regex-compat
    , semigroups
    , text
    , transformers >= 0.3
    , transformers-compat >= 0.4
    , zeromq4-haskell
  ghc-options:
    -Wall

executable synchronise
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Oneshot.hs
  other-modules:
    Paths_synchronise
  build-depends:
      base
    , configurator
    , ekg
    , filepath
    , optparse-applicative
    , synchronise
    , text
    , transformers
    , transformers-compat

executable synchronised
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Paths_synchronise
  build-depends:
      base
    , configurator
    , filepath
    , optparse-applicative
    , synchronise
    , text
    , transformers
    , transformers-compat

executable client
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             client.hs
  build-depends:
      base
    , bytestring
    , lens
    , optparse-applicative
    , text
    , zeromq4-haskell
    , synchronise

test-suite test-synchronise
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:
      base
    , synchronise
    , hspec

test-suite source-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             source-test.hs
  build-depends:
      base
    , aeson
    , hspec
    , HUnit
    , synchronise

test-suite store-psql-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             store-psql-test.hs
  build-depends:
      base
    , hspec
    , synchronise
    , lens
    , mtl
    , transformers
    , aeson
    , bytestring
    , text
    , containers
    , unordered-containers
    , vector
    , postgresql-simple
    , process

